// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector type snapshot test 1`] = `
<input
  checked={false}
  onClick={[Function]}
  type="checkbox"
/>
`;

exports[`Selector type snapshot test 2`] = `
<input
  checked={true}
  onClick={[Function]}
  type="checkbox"
/>
`;
